Se agrego la pagina de login y botones de inicio de sesion con facebook y google

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,22 @@
 <ion-header>
-  <ion-navbar>
-    <ion-title>
-      Ionic Blank
-    </ion-title>
-  </ion-navbar>
+    <ion-navbar>
+        <ion-title>
+            Bienvenido!
+        </ion-title>
+    </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+<ion-content>
+    <ion-list text-center>
+        <img [src]="user.imagen">
+    </ion-list>
+    <ion-item> {{ user.nombre }}</ion-item>
+    <ion-item> {{ user.email }}</ion-item>
+    <ion-item> {{ user.uid }}</ion-item>
+    <ion-item> {{ user.provider }} </ion-item>
+
+    <ion-item>
+        <button ion-button (click)="salir()" color="danger" block>Salir</button>
+    </ion-item>
+
 </ion-content>
